--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
     <!-- Favorite Websites -->
     <h2>My Favorite Websites</h2>
     <ul>
-        <li><a href="https://www.tradingview.com" target="_blank">Youtube</a></li>
+        <li><a href="https://www.tradingview.com" target="_blank">TradingView</a></li>
         <li><a href="https://chatgpt.com" target="_blank">ChatGPT</a></li>
-        <li><a href="https://www.linkedin.com" target="_blank">ESPN</a></li>
+        <li><a href="https://www.linkedin.com" target="_blank">LinkedIn</a></li>
     </ul>
 </body>
 </html>
